Added pagination component and users/products tabs in admin panel